--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
-<html>
-<body>
-<header>
-<style>
-width: 100%;
-height: 100%;
-</style>
-</header>
+<html style = width:"100%; height:100%;">
+<head>
+  <title>Ashenafi's Resume</title> 
+</head>
+ <body style = "width:100%; height:100%; margin:0;">
 <iframe src="http://docs.google.com/gview?url=https://github.com/Melkam22/resume/raw/master/CV%20Ashenafi%20Shiferaw_eng.pdf&
-embedded=true" style="width:100%; height="100%">
+embedded=true" style="width:100%; height:100%;">
 </body>
 </html>
